Bug 8872 - fix bustage due to BMO359454, yay black scrollbars - r=nick
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@9373 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/global/scrollbars.css
+++ b/app/skin/global/scrollbars.css
@@ -38,240 +38,10 @@
 /* ===== scrollbars.css =================================================
   == Styles used by XUL scrollbar-related elements.
   ======================================================================= */
-
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-@namespace html url("http://www.w3.org/1999/xhtml"); /* namespace for HTML elements */
-
-/* ::::: scrollbar ::::: */
-
-scrollbar {
-  -moz-binding: url("chrome://global/content/bindings/scrollbar.xml#scrollbar");
-  cursor: default;
-  background: url("chrome://global/skin/scrollbar/slider.gif") scrollbar;
-}
+  
+  /* Import the basic XUL scrollbars look */    
+  @import url("chrome://songbird-global/skin/scrollbar-styles.css");
 
 
-/* ::::: borders for thumb and buttons ::::: */
-
-thumb,
-scrollbarbutton {
-  border: 2px solid;
-  border-top: 1px solid #999;
-  border-right: 1px solid #333;
-  border-bottom: 1px solid #333;
-  border-left: 1px solid #999; 
-  background-color: -moz-Dialog;
-}
-
-scrollbar > slider
-{   
-  background-image: url("chrome://global/skin/20pct_transparent_pixel.png"); 
-} 
-
-/* ::::: thumb (horizontal) ::::: */
-
-thumb {
-  min-height: 16px;
-}
-
-thumb[orient="horizontal"] {
-  min-width: 16px;
-}
-
-
-/* ::::: scrollbar button ::::: */
-
-scrollbarbutton {
-  background: -moz-Dialog no-repeat 0px 1px;
-  min-width: 16px;
-  min-height: 16px;
-  background-position: center center !important;   
-}
-
-scrollbarbutton:hover:active, scrollbarbutton[active="true"] {
-  border-top: 1px solid #333;
-  border-right: 1px solid #999;
-  border-bottom: 1px solid #999;
-  border-left: 1px solid #333; 
-}
-
-/* ::::: square at the corner of two scrollbars ::::: */
-
-scrollcorner { 
-  -moz-binding: url("chrome://global/content/bindings/scrollbar.xml#scrollbar-base");
-  width: 16px;
-  cursor: default;
-  background-color: black;
-}
-
-
-
-/* ..... increment .... */
-
-scrollbarbutton[type="increment"] {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-right.png");
-}
-scrollbarbutton[type="increment"]:hover {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-right-hover.png");
-}
-scrollbarbutton[type="increment"]:active {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-right.png");
-}
-scrollbarbutton[type="increment"][disabled="true"] {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-right-disabled.png");
-}
-
-scrollbar[orient="vertical"] > scrollbarbutton[type="increment"] {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-down.png");
-}
-scrollbar[orient="vertical"] > scrollbarbutton[type="increment"]:hover {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-down-hover.png");
-}
-scrollbar[orient="vertical"] > scrollbarbutton[type="increment"]:active {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-down.png");
-}
-scrollbar[orient="vertical"] > scrollbarbutton[type="increment"][disabled="true"] {
-  background-image: url("chrome://songbird/skin/scrollbox/scroll-down-disabled.png");
-}
-
-/* ..... decrement .... */
-
-scrollbarbutton[type="decrement"] {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-left.png");
-}
-scrollbarbutton[type="decrement"]:hover {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-left-hover.png");
-}
-scrollbarbutton[type="decrement"]:active {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-left.png");
-}
-scrollbarbutton[type="decrement"][disabled="true"] {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-left-disabled.png");
-}
-
-
-scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"] {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-up.png");
-   -moz-background-clip: padding;
-}
-scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"]:hover {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-up-hover.png");
-   -moz-background-clip: padding;
-}
-scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"]:active {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-up.png");
-   -moz-background-clip: padding;
-}
-scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"][disabled="true"] {
-   background-image: url("chrome://songbird/skin/scrollbox/scroll-up-disabled.png");
-}
-
-
-
-
-/* :::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
-/* ::::::::::::::::::::: MEDIA PRINT :::::::::::::::::::::: */
-/* :::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
-@media print {
-  /* ::::: scrollbar ::::: */
-
-  html|div scrollbar {
-    -moz-appearance: scrollbartrack-horizontal;
-    -moz-binding: url("chrome://global/content/bindings/scrollbar.xml#scrollbar");
-    cursor: default;
-    background: url("chrome://global/skin/scrollbar/slider.gif") scrollbar;
-  }
-
-  html|div scrollbar[orient="vertical"] 
-  {
-     -moz-appearance: scrollbartrack-vertical;
-  }
-
-  /* ::::: borders for thumb and buttons ::::: */
-
-  html|div thumb,
-  html|div scrollbarbutton {
-    border-top: 1px solid #999;
-  border-right: 1px solid #333;
-  border-bottom: 1px solid #333;
-  border-left: 1px solid #999; 
-    background-color: -moz-Dialog;
-  }
-
-  /* ::::: thumb (horizontal) ::::: */
-
-  html|div thumb {
-    -moz-appearance: scrollbarthumb-vertical;
-    min-height: 16px;
-  }
-
-  html|div thumb[orient="horizontal"] {
-    -moz-appearance: scrollbarthumb-horizontal;
-    min-width: 16px;
-  }
-
-  html|div thumb > gripper {
-    -moz-appearance: scrollbargripper-vertical;
-  }
-
-  html|div thumb[orient="horizontal"] > gripper {
-    -moz-appearance: scrollbargripper-horizontal;
-  }
-
-  /* ::::: scrollbar button ::::: */
-
-  html|div scrollbarbutton {
-    background: -moz-Dialog no-repeat 0px 1px;
-    min-width: 16px;
-    min-height: 16px;
-  }
-
-  html|div scrollbarbutton:hover:active, html|div scrollbarbutton[active="true"] {
-    border-top: 1px solid #999;
-  border-right: 1px solid #333;
-  border-bottom: 1px solid #333;
-  border-left: 1px solid #999; 
-    background-position: 1px 2px;
-  }
-
-  /* ..... increment .... */
-
-  html|div scrollbarbutton[type="increment"] {
-    -moz-appearance: scrollbarbutton-right;
-    background-image: url("chrome://global/skin/arrow/arrow-rit.gif")
-  }
-
-  html|div scrollbarbutton[type="increment"][disabled="true"] {
-    background-image: url("chrome://global/skin/arrow/arrow-rit-dis.gif")
-  }
-
-  html|div scrollbar[orient="vertical"] > scrollbarbutton[type="increment"] {
-    -moz-appearance: scrollbarbutton-down;
-    background-image: url("chrome://global/skin/arrow/arrow-dn.gif")
-  }
-
-  html|div scrollbar[orient="vertical"] > scrollbarbutton[type="increment"][disabled="true"] {
-    background-image: url("chrome://global/skin/arrow/arrow-dn-dis.gif")
-  }
-
-  /* ..... decrement .... */
-
-  html|div scrollbarbutton[type="decrement"] {
-    -moz-appearance: scrollbarbutton-left;
-     background-image: url("chrome://global/skin/arrow/arrow-lft.gif")
-  }
-
-  html|div scrollbarbutton[type="decrement"][disabled="true"] {
-     background-image: url("chrome://global/skin/arrow/arrow-lft-dis.gif")
-  }
-
-  html|div scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"] {
-    -moz-appearance: scrollbarbutton-up;
-     background-image: url("chrome://global/skin/arrow/arrow-up.gif")
-  }
-
-  html|div scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"][disabled="true"] {
-     background-image: url("chrome://global/skin/arrow/arrow-up-dis.gif")
-  }
-
-}
+  /* Import the current feathers */    
+  @import url("chrome://songbird/skin/globalImport.css");
